# EcoSim

./: .gitignore  3dbeta.py  Beta.py  MODEL.md  README.md  main.py  pyproject.toml
ecosim/: __init__.py  cli.py  model.py  reporting.py
results-final/: timeseries.csv
results-final19/: timeseries.csv
results-final41/: timeseries.csv
results-long/: timeseries.csv
results-seed19/: timeseries.csv
results-seed41/: timeseries.csv
results-smoke/: timeseries.csv
results-tuned/: timeseries.csv
tests/: test_model.py  test_reporting.py
