[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ecosim"
version = "1.0.0"
description = "A reproducible spatial eco-evolutionary predator-prey simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
ecosim = "ecosim.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
